--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,31 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
+body{
+    height: 100vh;
+}
 
 div.container{
-    display: grid;
+    height: 100%;
     background-color: rgba(152, 235, 235, 0.747);
+    display: grid;
+    grid-template: 1fr 4fr / 1fr 4fr;
+}
+
+div > div.header{
+    background-color: chocolate;
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+div > div.sidebar{
+    background-color: cadetblue;
+    grid-area: 1 / 1 / 3 / 2;
+}
+
+div > div.main{
+    background-color: darkmagenta;
+    grid-area: 2 / 2 / 3 / 3;
 }
