--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ body{
 }
 
 div.container{
+    resize: both;
+    overflow: auto;
     height: 100%;
     background-color: rgba(152, 235, 235, 0.747);
     display: grid;
