--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 16px;
 }
 
 body{
@@ -25,9 +26,15 @@ div > div.header{
 div > div.sidebar{
     background-color: cadetblue;
     grid-area: 1 / 1 / 3 / 2;
+    display: grid;
+    grid-template-rows: 1fr 6fr;
 }
 
 div > div.main{
     background-color: darkmagenta;
     grid-area: 2 / 2 / 3 / 3;
+}
+
+li{
+    margin: 10px;
 }
