--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 16px;
+    font-family: sans-serif, 'Segoe UI', Tahoma, Geneva, Verdana;
 }
 
 body{
@@ -10,7 +10,6 @@ body{
 }
 
 div.container{
-    resize: both;
     overflow: auto;
     height: 100%;
     background-color: rgba(152, 235, 235, 0.747);
@@ -23,11 +22,44 @@ div > div.header{
     grid-area: 1 / 2 / 2 / 3;
 }
 
-div > div.sidebar{
+div.sidebar{
     background-color: cadetblue;
     grid-area: 1 / 1 / 3 / 2;
     display: grid;
-    grid-template-rows: 1fr 6fr;
+    grid-template-rows: 0.4fr 1.5fr 2.3fr;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+ul.sidebar.socialmedia{
+    grid-row: 2 / 3;
+    display: grid;
+    grid-template-rows: repeat(6, minmax(10px, 50px));
+    justify-items: start;
+    padding-left: calc(100% - 250px);
+}
+
+ul.sidebar.settings{
+    grid-row: 3 / 4;
+    display: grid;
+    grid-template-rows: repeat(3, minmax(15px, 50px));
+    margin-top: 40px;
+    justify-items: start;
+    padding-left: calc(100% - 250px);
+}
+
+li{
+    /*margin: 25px 25px 25px 60px;*/
+    margin-left: 10px;
+    list-style-type: none;
+}
+
+div.title{
+    margin: 20px 10px;
+}
+
+div.sidebar>div.header{
+    grid-row: 1 / 2;
 }
 
 div > div.main{
@@ -35,6 +67,3 @@ div > div.main{
     grid-area: 2 / 2 / 3 / 3;
 }
 
-li{
-    margin: 10px;
-}
