--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ div > div.header{
     grid-area: 1 / 2 / 2 / 3;
 }
 
+/*-------------SIDEBAR------------*/
 div.sidebar{
     background-color: cadetblue;
     grid-area: 1 / 1 / 3 / 2;
@@ -29,6 +30,7 @@ div.sidebar{
     grid-template-rows: 0.4fr 1.5fr 2.3fr;
     font-size: 1.5rem;
     font-weight: bold;
+    color: white;
 }
 
 ul.sidebar.socialmedia{
@@ -36,7 +38,8 @@ ul.sidebar.socialmedia{
     display: grid;
     grid-template-rows: repeat(6, minmax(10px, 50px));
     justify-items: start;
-    padding-left: calc(100% - 250px);
+    padding-left: calc(100% - 270px);
+    list-style-position: inside;
 }
 
 ul.sidebar.settings{
@@ -48,10 +51,67 @@ ul.sidebar.settings{
     padding-left: calc(100% - 250px);
 }
 
+li.item1::before{
+    background: url('../img/home-flood.png');
+}
+
+li.item2::before{
+    background: url('../img/profile.png');
+}
+
+li.item3::before{
+    background: url('../img/message.png');
+}
+
+li.item4::before{
+    background: url('../img/message.png');
+}
+
+li.item5::before{
+    background: url('../img/message.png');
+}
+
+li.item6::before{
+    background: url('../img/message.png');
+}
+
+li.item7::before{
+    background: url('../img/message.png');
+}
+
+li.item8::before{
+    background: url('../img/message.png');
+}
+
+li.item9::before{
+    background: url('../img/message.png');
+}
+
+
+li.item1::before,
+li.item2::before,
+li.item3::before,
+li.item4::before,
+li.item5::before,
+li.item6::before,
+li.item7::before,
+li.item8::before,
+li.item9::before{
+    content: '';
+    display: block;
+    width: 38px;
+    height: 20px;
+    padding: 10px 0px;
+    background-repeat: no-repeat;
+    background-size: 34px;
+}
+
 li{
-    /*margin: 25px 25px 25px 60px;*/
     margin-left: 10px;
     list-style-type: none;
+    display: flex;
+    gap: 5px;
+    align-items: center;
 }
 
 div.title{
@@ -61,6 +121,8 @@ div.title{
 div.sidebar>div.header{
     grid-row: 1 / 2;
 }
+
+/*-------------SIDEBAR------------*/
 
 div > div.main{
     background-color: darkmagenta;
