--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,14 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif, 'Segoe UI', Tahoma, Geneva, Verdana;
+    font-size: calc(14px + (21 - 14) * ((100vw - 300px) / (1600 - 300)));
+
+    --sidebar-padding-left: calc(100% - 205px);
 }
 
 body{
     height: 100vh;
+    
 }
 
 div.container{
@@ -14,7 +18,7 @@ div.container{
     height: 100%;
     background-color: rgba(152, 235, 235, 0.747);
     display: grid;
-    grid-template: 1fr 4fr / 1fr 4fr;
+    grid-template: 1fr 4fr / 0.7fr 4fr;
 }
 
 div > div.header{
@@ -28,7 +32,7 @@ div.sidebar{
     grid-area: 1 / 1 / 3 / 2;
     display: grid;
     grid-template-rows: 0.4fr 1.5fr 2.3fr;
-    font-size: 1.5rem;
+    grid-template-columns: 0.4fr;
     font-weight: bold;
     color: white;
 }
@@ -37,8 +41,9 @@ ul.sidebar.socialmedia{
     grid-row: 2 / 3;
     display: grid;
     grid-template-rows: repeat(6, minmax(10px, 50px));
+    margin-top: 20px;
     justify-items: start;
-    padding-left: calc(100% - 270px);
+    padding-left: var(--sidebar-padding-left);
     list-style-position: inside;
 }
 
@@ -46,9 +51,17 @@ ul.sidebar.settings{
     grid-row: 3 / 4;
     display: grid;
     grid-template-rows: repeat(3, minmax(15px, 50px));
-    margin-top: 40px;
+    margin-top: 30px;
     justify-items: start;
-    padding-left: calc(100% - 250px);
+    padding-left: var(--sidebar-padding-left);
+    list-style-position: inside;
+}
+
+div.title{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 li.item1::before{
@@ -87,7 +100,6 @@ li.item9::before{
     background: url('../img/privacy.png');
 }
 
-
 li.item1::before,
 li.item2::before,
 li.item3::before,
@@ -117,12 +129,25 @@ li{
 div.title{
     margin: 20px 10px;
 }
-
-div.sidebar>div.header{
-    grid-row: 1 / 2;
+div.title > div{
+    font-size: 1.4rem;
 }
 
 /*-------------SIDEBAR------------*/
+
+/*-------------HEADER------------*/
+
+div.container > div.header{
+    grid-row: 1 / 2;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+
+
+
+/*-------------HEADER------------*/
 
 div > div.main{
     background-color: darkmagenta;
