--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ div.container > div.header{
     grid-template-columns: 2fr 1fr;
     grid-template-rows:  0.4fr 1fr;
     overflow: hidden;
-    padding: 10px;
+    padding: 15px;
 }
 
 div.search-div{
@@ -187,6 +187,26 @@ img#user-pic{
     height: 50px;
     border-radius: 50%;
 }
+
+img#user-pic-two{
+    width: auto;
+    height: 75px;
+    border-radius: 50%;
+    justify-self: center;
+    margin: 5px;
+}
+
+div#user-header-two{
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    align-content: center;
+}
+
+div.greet{
+    grid-column: 2 / 5;
+    align-self: center;
+}
+
 
 /*-------------HEADER------------*/
 
