--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
 
 body{
     height: 100vh;
-    
 }
 
 div.container{
@@ -230,8 +229,75 @@ div.button-header > button{
 
 /*-------------HEADER------------*/
 
+/*-------------MAIN------------*/
+
 div > div.main{
     background-color: darkmagenta;
     grid-area: 2 / 2 / 3 / 3;
+    display: grid;
+    grid-template-columns: repeat(15, 1fr);
+    grid-template-rows: repeat(15, 1fr);
 }
 
+div.main > h2{
+    font-size: 1rem;
+}
+
+h2.text-project{
+    grid-column: 1 / 3;
+}
+
+h2.text-announce{
+    grid-column: 12 / 16;
+}
+
+h2.text-trend{
+    grid-column: 12 / 16;
+    grid-row: 8 / 16;   
+}
+
+div.project-cards{
+    background-color: beige;
+    grid-column: 1 / 12;
+    grid-row: 2 / 16;
+}
+
+
+.cards.one{
+    color:red;
+}
+
+.cards.two{
+    color:blue;
+}
+
+.cards.three{
+    color:brown;
+}
+
+.cards.four{
+    color: coral;
+}
+
+.cards.five{
+    color:yellow;
+}
+
+.cards.six{
+    color:violet;
+}
+
+
+
+/*-------------MAIN------------*/
+
+/*-------------TEST------------
+a > object.icon-item10{
+    filter: invert(100%) sepia(81%) saturate(7291%) hue-rotate(357deg) brightness(108%) contrast(120%);
+}
+
+li.item10 > a:hover{
+    color: rgb(98, 0, 255);
+    filter: invert(19%) sepia(81%) saturate(7291%) hue-rotate(357deg) brightness(108%) contrast(120%);
+}
+--------------TEST----------*/
