--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    height: 100vh;
+    height: 100%;
 }
 
 div.container{
@@ -23,6 +23,7 @@ div.container{
 div > div.header{
     background-color: chocolate;
     grid-area: 1 / 2 / 2 / 3;
+
 }
 
 /*-------------SIDEBAR------------*/
@@ -143,6 +144,7 @@ div.container > div.header{
     grid-template-rows:  0.4fr 1fr;
     overflow: hidden;
     padding: 15px;
+    max-height: 193px;
 }
 
 div.search-div{
@@ -236,59 +238,93 @@ div > div.main{
     grid-area: 2 / 2 / 3 / 3;
     display: grid;
     grid-template-columns: repeat(15, 1fr);
-    grid-template-rows: repeat(15, 1fr);
+    grid-template-rows: repeat(auto, 1fr);
 }
 
 div.main > h2{
     font-size: 1rem;
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 10px;
 }
 
 h2.text-project{
     grid-column: 1 / 3;
 }
 
-h2.text-announce{
-    grid-column: 12 / 16;
-}
-
-h2.text-trend{
-    grid-column: 12 / 16;
-    grid-row: 8 / 16;   
-}
 
 div.project-cards{
     background-color: beige;
     grid-column: 1 / 12;
     grid-row: 2 / 16;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr)/*repeat(auto-fill, minmax(235px, 1fr))*/;
+    grid-template-columns: repeat(auto-fill, minmax(355px, 1fr));
+    row-gap: 10px;
+    padding: 5px;
 }
 
 
-.cards.one{
-    color:red;
+.cards{
+    border: 1px solid red;
+    border-left: 10px solid red;
+    border-radius: 10px;
+    width: 350px;
+    height: 230px;
+    justify-self: center;
+    margin: auto;
 }
 
-.cards.two{
-    color:blue;
+.side{
+    margin: auto;
+    display: grid;
+    row-gap: 14px;
 }
 
-.cards.three{
-    color:brown;
+.side.one{
+    grid-row: 1 / 8;
+    grid-column: 12 / 16;
 }
 
-.cards.four{
-    color: coral;
+.side.two{
+    grid-row: 8 / 15;
+    grid-column: 12 / 16;  
 }
 
-.cards.five{
-    color:yellow;
+div.announces-card,
+div.trending-card{
+    border: 1px solid black;
+    width: 290px;
+    height: 300px;
 }
 
-.cards.six{
-    color:violet;
+@media (max-width: 1220px) {
+    .side.one{
+        grid-row: 1 / 8;
+        grid-column: 1 / 5;
+    }
+    
+    .side.two{
+        grid-row: 1 / 8;
+        grid-column: 5 / 10;  
+    }
+
+    h2.text-project{
+        grid-column: 1 / 3;
+        grid-row: 9 / 10;
+    }
+    
+    div.project-cards{
+        background-color: beige;
+        grid-column: 1 / 12;
+        grid-row: 10 / 24;
+        display: grid;
+        grid-template-rows: repeat(2, 1fr)/*repeat(auto-fill, minmax(235px, 1fr))*/;
+        grid-template-columns: repeat(auto-fill, minmax(355px, 1fr));
+        row-gap: 10px;
+        padding: 5px;
+    }
 }
-
-
-
 /*-------------MAIN------------*/
 
 /*-------------TEST------------
