--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body{
-    height: 100%;
+    height: 960px;
 }
 
 div.container{
@@ -17,7 +17,7 @@ div.container{
     height: 100%;
     background-color: rgba(152, 235, 235, 0.747);
     display: grid;
-    grid-template: 1fr 4fr / 0.7fr 4fr;
+    grid-template: minmax(0, 194px) minmax(0, 4fr) / minmax(0, 0.7fr) minmax(0, 4fr);
 }
 
 div > div.header{
@@ -31,8 +31,8 @@ div.sidebar{
     background-color: cadetblue;
     grid-area: 1 / 1 / 3 / 2;
     display: grid;
-    grid-template-rows: 0.4fr 1.5fr 2.3fr;
-    grid-template-columns: 0.4fr;
+    grid-template-rows: minmax(0, 0.4fr) minmax(0, 1.5fr) minmax(0, 2.3fr);
+    grid-template-columns: minmax(0, 0.4fr);
     font-weight: bold;
     color: white;
 }
@@ -234,14 +234,19 @@ div.button-header > button{
 /*-------------MAIN------------*/
 
 div > div.main{
-    background-color: darkmagenta;
+    height: auto;
+    background-color: rgb(255, 255, 255);
     grid-area: 2 / 2 / 3 / 3;
     display: grid;
-    grid-template-columns: repeat(15, 1fr);
-    grid-template-rows: repeat(auto, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
+    row-gap: 10px;
+    overflow: scroll;
 }
 
-div.main > h2{
+div.main > h2,
+div.side.one > h2,
+div.side.two > h2 {
     font-size: 1rem;
     margin-top: auto;
     margin-bottom: auto;
@@ -254,11 +259,11 @@ h2.text-project{
 
 
 div.project-cards{
-    background-color: beige;
+    background-color: rgb(255, 255, 255);
     grid-column: 1 / 12;
     grid-row: 2 / 16;
     display: grid;
-    grid-template-rows: repeat(2, 1fr)/*repeat(auto-fill, minmax(235px, 1fr))*/;
+    grid-template-rows: repeat(2, minmax(0, 1fr))/*repeat(auto-fill, minmax(235px, 1fr))*/;
     grid-template-columns: repeat(auto-fill, minmax(355px, 1fr));
     row-gap: 10px;
     padding: 5px;
@@ -275,55 +280,55 @@ div.project-cards{
     margin: auto;
 }
 
-.side{
+.sides{
+    grid-column: 12 / 16;
+    grid-row: 1 / 16;
     margin: auto;
     display: grid;
     row-gap: 14px;
+    justify-self: center;
+    align-items: stretch;
+    height: 100%;
 }
 
-.side.one{
-    grid-row: 1 / 8;
-    grid-column: 12 / 16;
-}
-
-.side.two{
-    grid-row: 8 / 15;
-    grid-column: 12 / 16;  
-}
 
 div.announces-card,
 div.trending-card{
     border: 1px solid black;
     width: 290px;
     height: 300px;
+    border-radius: 5px;
 }
 
 @media (max-width: 1220px) {
-    .side.one{
-        grid-row: 1 / 8;
-        grid-column: 1 / 5;
-    }
-    
-    .side.two{
-        grid-row: 1 / 8;
-        grid-column: 5 / 10;  
-    }
 
     h2.text-project{
-        grid-column: 1 / 3;
-        grid-row: 9 / 10;
+        grid-column: 1 / 16;
+        grid-row: 16 / 17;
     }
     
     div.project-cards{
         background-color: beige;
-        grid-column: 1 / 12;
-        grid-row: 10 / 24;
+        grid-column: 1 / 16;
+        grid-row: 19 / 33;
         display: grid;
-        grid-template-rows: repeat(2, 1fr)/*repeat(auto-fill, minmax(235px, 1fr))*/;
+        grid-template-rows: repeat(2, 1fr);
         grid-template-columns: repeat(auto-fill, minmax(355px, 1fr));
         row-gap: 10px;
         padding: 5px;
     }
+
+    .sides{
+        grid-column: 1 / 16;
+        grid-row: 1 / 14;
+        margin: auto;
+        display: grid;
+        column-gap: 14px;
+        height: 100%;
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+
 }
 /*-------------MAIN------------*/
 
