--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,15 @@
 }
 
 body{
-    height: 960px;
+    height: 100vh;
 }
 
 div.container{
-    overflow: auto;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(152, 235, 235, 0.747);
     display: grid;
     grid-template: minmax(0, 194px) minmax(0, 4fr) / minmax(0, 0.7fr) minmax(0, 4fr);
+    grid-auto-rows: auto;
 }
 
 div > div.header{
@@ -242,6 +242,7 @@ div > div.main{
     grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
     row-gap: 10px;
     overflow: scroll;
+    grid-auto-rows: auto;
 }
 
 div.main > h2,
@@ -264,9 +265,11 @@ div.project-cards{
     grid-row: 2 / 16;
     display: grid;
     grid-template-rows: repeat(2, minmax(0, 1fr))/*repeat(auto-fill, minmax(235px, 1fr))*/;
-    grid-template-columns: repeat(auto-fill, minmax(355px, 1fr));
-    row-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(355px, 1fr));
     padding: 5px;
+    grid-gap: 20px;
+    grid-auto-rows: auto;
+    height: min-content;
 }
 
 
@@ -275,7 +278,7 @@ div.project-cards{
     border-left: 10px solid red;
     border-radius: 10px;
     width: 350px;
-    height: 230px;
+    height: 340px;
     justify-self: center;
     margin: auto;
 }
@@ -296,7 +299,7 @@ div.announces-card,
 div.trending-card{
     border: 1px solid black;
     width: 290px;
-    height: 300px;
+    height: 350px;
     border-radius: 5px;
 }
 
@@ -305,6 +308,7 @@ div.trending-card{
     h2.text-project{
         grid-column: 1 / 16;
         grid-row: 16 / 17;
+        margin: auto;
     }
     
     div.project-cards{
@@ -313,7 +317,7 @@ div.trending-card{
         grid-row: 19 / 33;
         display: grid;
         grid-template-rows: repeat(2, 1fr);
-        grid-template-columns: repeat(auto-fill, minmax(355px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(355px, 1fr));
         row-gap: 10px;
         padding: 5px;
     }
@@ -329,6 +333,55 @@ div.trending-card{
         grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 
+    div.sidebar p{
+        display: none;
+    }
+
+    div.container{
+        grid-template: minmax(0, 194px) minmax(0, 4fr) / minmax(0, 50px) minmax(0, 4fr);
+        
+    }
+
+    div.sides h2{
+        text-align: center;
+    }
+    
+}
+
+@media (max-width: 680px){
+    
+    .sides{
+        height: fit-content;
+        grid-row: 1 / 30;
+        grid-template-rows: repeat(2, minmax(0, 1fr));
+        grid-template-columns: minmax(0, 1fr);
+    }
+
+    div.project-cards{
+        background-color: beige;
+        grid-row: 31 / 46;
+        display: grid;
+        grid-template-rows: repeat(6, minmax(0, 1fr));
+        grid-template-columns: minmax(0, 355px);
+        row-gap: 10px;
+        padding: 5px;
+        margin: 260px auto;
+        height: fit-content;
+    }
+
+    div > div.main{
+        height: 100%;
+        grid-area: 2 / 2 / 3 / 3;
+        display: grid;
+        grid-template-columns: minmax(0, 1fr);
+        grid-template-rows: repeat(46, minmax(0, 1fr))/*minmax(0, 1fr) minmax(0, 0.6fr) minmax(0, 5fr)*/;
+        row-gap: 10px;
+    }
+
+    h2.text-project{
+        grid-row: 43 / 44;
+        margin: 260px auto;
+    }  
 }
 /*-------------MAIN------------*/
 
