--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,261 @@
     font-family: sans-serif, 'Segoe UI', Tahoma, Geneva, Verdana;
     font-size: calc(14px + (18 - 14) * ((100vw - 300px) / (1600 - 300)));
 
+
+
     --sidebar-padding-left: calc(100% - 240px);
+
+    --border-radius: 100em;
+
+    --svg-color-100: invert(5%) sepia(72%) saturate(601%) hue-rotate(340deg) brightness(102%) contrast(109%);
+    --svg-color-200: invert(100%) sepia(96%) saturate(17%) hue-rotate(90deg) brightness(104%) contrast(103%);
+
+    --padding-100: 10px;
+    --padding-200: 20px;
+    --padding-400: 2rem;
+    --padding-500: ;
+    --padding-600: 40px;
+
 }
 
 
-/*-------------MAIN------------*/
-
-/*-------------TEST------------
-a > object.icon-item10{
-    filter: invert(100%) sepia(81%) saturate(7291%) hue-rotate(357deg) brightness(108%) contrast(120%);
+html{
+    margin-inline: auto;
+    overflow-y: scroll;
 }
 
-li.item10 > a:hover{
-    color: rgb(98, 0, 255);
-    filter: invert(19%) sepia(81%) saturate(7291%) hue-rotate(357deg) brightness(108%) contrast(120%);
+.svg-color-100{
+    filter: var(--svg-color-100);
 }
---------------TEST----------*/
+
+.svg-color-200{
+    filter: var(--svg-color-100);
+}
+
+.svg-title{
+    width: 45px;
+    height: 45px;
+}
+
+.svg-icons{
+    width: 24px;
+    height: 24px;
+}
+
+.sz-pic-100{
+    width: 35px;
+    border-radius: var(--border-radius);
+}
+
+.sz-pic-300{
+    width: 60px;
+    border-radius: var(--border-radius);
+}
+
+.container{
+    display: grid;
+    grid-template-columns: 20% 80%;
+    grid-template-rows: 10% 90%;
+    margin-inline: auto;
+    max-width: min(1350px, 100%);
+    padding-inline: 0.5rem;
+    
+}
+
+/*-----------Header----------*/
+header{
+    grid-area: 1 / 2 / 2 / 3;
+    position: sticky;
+    top: 0;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    background-color: burlywood;
+    padding: var(--padding-100) var(--padding-400);
+    row-gap: 5px;
+}
+
+.primary-header{
+    grid-area: 1 / 1 / 2 / 2;
+    display: grid;
+    grid-template-columns: 77% 5% 18%;
+    gap: 5px;
+}
+
+#notification,
+form{
+    justify-self: center;
+    align-self: center;
+}
+
+button.onlybtn{
+    padding-top: 4px;
+    border: none;
+    background-color: rgba(240, 248, 255, 0);
+}
+
+form{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 6px;
+}
+
+input[type="search"]{
+    width: 85%;
+    border-radius: 50em;
+    border: none;
+}
+
+.profile-one{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+    width: 100%;
+}
+
+.secondary-header{
+    grid-area: 2 / 1 / 3 / 2;
+    display: grid;
+    grid-auto-flow: column;
+    align-items: baseline;
+    padding-top: var(--padding-200);
+    width: 100%;
+}
+
+.greetings{
+    display: grid;
+    grid-template-rows: repeat(2, minmax(0, 50%));
+    grid-template-columns: minmax(0, 15%) minmax(0, 95%);
+    column-gap: 5px;
+}
+
+div.greetings > .img{
+    grid-area: 1 / 1 / 2 / 2;
+    margin: auto;
+}
+
+div.greetings > .h4{
+    grid-area: 1 / 2 / 2 / 3;
+    align-self: center;
+    margin: auto;
+    margin-left: 10px;
+}
+
+div.greetings > .h2{
+    grid-area: 2 / 2 / 3 / 3;
+    align-self: flex-start;
+    margin-left: 10px;
+}
+
+
+/*-----------Header----------*/
+/*-------------sidebar----------*/
+
+nav{
+    grid-area: 1 / 1 / 3 / 2;
+    width: 15%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    padding: auto;
+    display: flex;
+    flex-direction: column;
+    row-gap: 50px;
+    overflow-y: auto;
+}
+
+
+nav ul{
+    width: 50%;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    
+}
+
+ul.primary-sidebar li a,
+ul.secondary-sidebar li a
+{
+    display: flex;
+    flex: 1;
+    justify-content: flex-start;
+    align-items: center;
+    text-decoration: none;
+    column-gap: 15px;
+    width: 100%;
+}
+
+ul.primary-sidebar li a:not(.title-li),
+ul.secondary-sidebar li a{
+    margin-left: 7%
+}
+    
+.title-li{
+    height: 100px;
+}
+
+/*-------------sidebar----------*/
+
+
+main{
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+li{
+    list-style-type: none;
+}
+
+
+
+@media screen and (max-width: 980px){
+    .disappear{
+        display: none;
+        width: 100px;
+    }
+
+    .container{
+        display: grid;
+        grid-template-columns: minmax(50px, 5%) 95%;
+        grid-template-rows: 10% 90%;
+        margin-inline: auto;
+        max-width: min(1250px, 100%);
+        padding-inline: 0.5rem;
+    }
+
+    nav{
+        width: 50px;
+        margin: 0 auto;
+    }
+
+    nav ul{
+        width: 100%;
+        margin: 0;
+        align-items: stretch;
+        row-gap: 0;
+    }
+
+    .title-li{
+        align-content: center;
+        height: 45px;
+        width: 45px;
+        margin: 30px 0;
+    }
+
+    ul.primary-sidebar li a:not(.title-li),
+    ul.secondary-sidebar li a{
+        margin-left: auto;
+        height: 40px;
+        justify-content: center;
+        margin-left: -3px;
+    }
+
+    li{
+        width: 100%;
+    }
+}
