--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif, 'Segoe UI', Tahoma, Geneva, Verdana;
-    font-size: calc(14px + (18 - 14) * ((100vw - 300px) / (1600 - 300)));
-
+    /*font-size: calc(16px + (18 - 16) * ((100vw - 300px) / (1600 - 300)));*/
+    
 
 
     --sidebar-padding-left: calc(100% - 240px);
@@ -16,16 +16,17 @@
 
     --padding-100: 10px;
     --padding-200: 20px;
-    --padding-400: 2rem;
+    --padding-400: 1.5rem;
     --padding-500: ;
     --padding-600: 40px;
-
+    
 }
 
 
 html{
     margin-inline: auto;
     overflow-y: scroll;
+    font-size: 62.5%;
 }
 
 .svg-color-100{
@@ -52,18 +53,27 @@ html{
 }
 
 .sz-pic-300{
-    width: 60px;
+    height: 100%;
+    max-width: max(55px, 80%);
     border-radius: var(--border-radius);
 }
 
+.fs-heading-secondary{
+    font-size: clamp(1.3rem, 1.6rem, 2rem);
+}
+
+.fs-heading-primary{
+    font-size: clamp(1.6rem, 1.9rem, 3rem);
+}
+
 .container{
+    font-size: 1.6rem;
     display: grid;
     grid-template-columns: 20% 80%;
     grid-template-rows: 10% 90%;
     margin-inline: auto;
     max-width: min(1350px, 100%);
     padding-inline: 0.5rem;
-    
 }
 
 /*-----------Header----------*/
@@ -72,16 +82,16 @@ header{
     position: sticky;
     top: 0;
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 30% 70%;
     background-color: burlywood;
     padding: var(--padding-100) var(--padding-400);
-    row-gap: 5px;
+    z-index: 1;
 }
 
 .primary-header{
     grid-area: 1 / 1 / 2 / 2;
     display: grid;
-    grid-template-columns: 77% 5% 18%;
+    grid-template-columns: 70% 5% 20%;
     gap: 5px;
 }
 
@@ -101,6 +111,7 @@ form{
     width: 100%;
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 6px;
 }
 
@@ -108,9 +119,11 @@ input[type="search"]{
     width: 85%;
     border-radius: 50em;
     border: none;
+    height: 30px;
 }
 
 .profile-one{
+    width: 90%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -122,37 +135,70 @@ input[type="search"]{
 .secondary-header{
     grid-area: 2 / 1 / 3 / 2;
     display: grid;
-    grid-auto-flow: column;
-    align-items: baseline;
-    padding-top: var(--padding-200);
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
     width: 100%;
+    height: 100%;
 }
 
 .greetings{
     display: grid;
-    grid-template-rows: repeat(2, minmax(0, 50%));
-    grid-template-columns: minmax(0, 15%) minmax(0, 95%);
-    column-gap: 5px;
-}
-
-div.greetings > .img{
-    grid-area: 1 / 1 / 2 / 2;
-    margin: auto;
-}
-
-div.greetings > .h4{
-    grid-area: 1 / 2 / 2 / 3;
     align-self: center;
-    margin: auto;
-    margin-left: 10px;
+    height: 100%;
+    grid-template-rows: repeat(2, minmax(0, 50%));
+    grid-template-columns: minmax(0, 20%) minmax(0, 80%);
 }
 
-div.greetings > .h2{
+div.greetings div.img{
+    grid-area: 1 / 1 / 3 / 2;
+    align-self: center;
+    justify-self: flex-end;
+    width: 100%;
+}
+
+div.img > img{
+    margin: 5px 5px auto 15px;
+}
+
+div.greetings div.h4{
+    grid-area: 1 / 2 / 2 / 3;
+    margin-top: auto;
+    margin-bottom: 0;
+    margin-left: 10px;
+    width: 100%;
+}
+
+div.h4 > h4{
+    margin: 1.5rem auto auto auto;
+}
+
+div.h2 > h2{
+    
+}
+
+div.greetings div.h2{
     grid-area: 2 / 2 / 3 / 3;
-    align-self: flex-start;
+    margin-top: 1px;
+    margin-bottom: auto;
     margin-left: 10px;
+    width: 100%;
 }
 
+button.shared-btn{
+    width: 100px;
+    height: 40px;
+    margin-top: 15px;
+    border-radius: 50em;
+}
+
+div.btn-header{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
 
 /*-----------Header----------*/
 /*-------------sidebar----------*/
@@ -220,7 +266,14 @@ li{
 @media screen and (max-width: 980px){
     .disappear{
         display: none;
-        width: 100px;
+    }
+
+    header{
+        width: 95%;
+    }
+
+    main{
+        width: 95%;
     }
 
     .container{
@@ -229,7 +282,7 @@ li{
         grid-template-rows: 10% 90%;
         margin-inline: auto;
         max-width: min(1250px, 100%);
-        padding-inline: 0.5rem;
+        padding-inline: 0.1rem;
     }
 
     nav{
@@ -261,5 +314,38 @@ li{
 
     li{
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 710px){
+    .header-disappear{
+        display: none;
+    }
+    .container{
+        grid-template-rows: 5% 90%;
+    }
+
+    .secondary-header{
+        grid-area: 2 / 1 / 3 / 2;
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+        width: 90%;
+        height: 50%;
+    }
+
+    button.shared-btn{
+        width: 80px;
+        height: 30px;
+        margin-top: 22px;
+        border-radius: 50em;
+    }
+
+    header{
+        width: 90%;
+    }
+
+    main{
+        width: 90%;
     }
 }
