--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ nav{
     height: 100%;
     position: fixed;
     top: 0;
+    left: 0;
     z-index: 1;
     padding: auto;
     display: flex;
@@ -298,12 +299,27 @@ div.cards{
     width: 300px;
     height: 200px;
     padding: 10px;
+    display: grid;
+    grid-template-rows: 15% 70% 15%;
 }
 
+ul.link-Cards{
+    display: flex;
+    flex-direction: row;
+    column-gap: 10px;
+    justify-self: flex-end;
+}
 div.an-cards,
 div.tren-cards{
     border: 1px solid red;
     width: 250px;
+}
+
+div.TA-cards{
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 270px;
+    height: 320px;
 }
 /*-------------MAIN------------*/
 
